<resources>
    <string name="app_name">Calitracker</string>
    <string name="calitracker">CALITRACKER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_sign_up">Sign_Up</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="calitracker_logo">Calitracker logo</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="go_back_arrow">go back arrow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="exercises">
        <item>SQUATS</item>
        <item>PULL UPS</item>
        <item>HANDSTAND PUSH UPS</item>
        <item>LEG RAISES</item>
        <item>PUSH UPS</item>
        <item>DIPS</item>
        <item>HORIZONTAL PULLS</item>

    </string-array>
    <string-array name="SQUATS">
        <item>ASSISTED SQUAT</item>
        <item>DEEP ASSISTED SQUAT</item>
        <item>SQUATS</item>
        <item>DEEP SQUATS</item>
        <item>BULGARIAN SPLIT SQUATS</item>
        <item>BEGINNER SHRIMPS</item>
        <item>ASSISTED ONE LEGGED SQUATS</item>
        <item>WEIGHTED ONE LEGGED SQUATS</item>
        <item>ONE-LEGGED SQUATS</item>
        <item>RENEGADE PISTOLS</item>
        <item>INTERMEDIATE SHRIMPS</item>
        <item>ADVANCED SHRIMPS</item>

    </string-array>
    <string-array name="SQUATS_VIDEOURL">
        <item>CcnyxSe_H9g</item>
        <item>p83ngGsZhp4</item>
        <item>xqvCmoLULNY</item>
        <item>AYQWVdPgQl0</item>
        <item>7Aqeb8UHl4k</item>
        <item>Dpgn6eRtsdw</item>
        <item>E3FZyX5NOoY</item>
        <item>NozfdD-u12A</item>
        <item>9_Ca2YRRdtE</item>
        <item>Yx7-ywBEIQM</item>
        <item>Dpgn6eRtsdw</item>
        <item>5EJtZsA43vI</item>

    </string-array>
    <string-array name="PULL_UPS">
        <item>LEG ASSISTED PULL UPS</item>
        <item>JACKKNIFE PULL UPS</item>
        <item>ECCENTRIC PULL UPS</item>
        <item>HALF PULL UPS</item>
        <item>PULL UPS</item>
        <item>CLOSE GRIP PULL UPS</item>
        <item>WIDE GRIP PULL UPS</item>
        <item>ARCHER PULL UPS</item>
        <item>STERNUM PULL UPS</item>
        <item>BELLY BUTTON PULL UPS</item>
        <item>ONE ARM TOWEL-ASSISTED PULL UPS</item>
        <item>HALF ONE ARM PULL UPS</item>
        <item>ONE ARM PULL UPS</item>

    </string-array>
    <string-array name="PULL_UPS_VIDEOURL">
        <item>_M8NHO7tb1I</item>
        <item>0AGflL3itws</item>
        <item>hvhQXzJ4vhM</item>
        <item>_o8SBJr--Pk</item>
        <item>HRV5YKKaeVw</item>
        <item>j--ftfgTL5I</item>
        <item>dWB-hEfgMD4</item>
        <item>ikKG260TMwU</item>
        <item>-XXuIwW56Zw</item>
        <item>-XXuIwW56Zw</item>
        <item>FZPjwl1NSdI</item>
        <item>ve0EIQdRLag</item>
        <item>yluoscpttpI</item>

    </string-array>
    <string-array name="HANDSTAND">
        <item>INCLINE PIKE PUSH UPS</item>
        <item>INCLINE PIKE DIAMOND PUSH UPS</item>
        <item>PIKE PUSH UPS</item>
        <item>PIKE DIAMOND PUSH UPS</item>
        <item>DECLINE PIKE PUSH UPS</item>
        <item>DECLINE PIKE DIAMOND PUSH UPS</item>
        <item>WALL BENT WAIST HANDSTAND PUSH UPS</item>
        <item>WALL BENT WAIST HANDSTAND DIAMOND PUSH UPS</item>
        <item>WALL HANDSTAND PUSH UPS</item>
        <item>WALL HANDSTAND DIAMOND PUSH UPS</item>
        <item>WALL HANDSTAND RAISED PUSH UPS</item>


    </string-array>
    <string-array name="HANDSTAND_VIDEOURL">
        <item>Dh5r4KMEKgo</item>
        <item>Ruu2bEEzhSg</item>
        <item>2GrYI9L_PnU</item>
        <item>XyEAJZn_QeM</item>
        <item>OQAZoUPoPUw</item>
        <item>3_t6n2AUQQ0</item>
        <item>r2kV4xfBSEA</item>
        <item>r2kV4xfBSEA</item>
        <item>WxgJS48wf1M</item>
        <item>kgTbAtZHfOs</item>
        <item>87MFaCpbTvM</item>


    </string-array>
    <string-array name="LEGRAISES">
        <item>FLAT KNEE RAISES</item>
        <item>FLAT BENT LEG RAISES</item>
        <item>FLAT STRAIGHT LEG RAISES</item>
        <item>FOREARM KNEE RAISES</item>
        <item>HANGING KNEE RAISES</item>
        <item>FOREARM BENT LEG RAISES</item>
        <item>HANGING BENT LEG RAISES</item>
        <item>FOREARM STRAIGHT LEG RAISES</item>
        <item>HANGING STRAIGHT LEG RAISES</item>
        <item>HANGING BENT LEG V-RAISES</item>
        <item>HANGING STRAIGHT LEG V-RAISES</item>
        <item>HANGING FAN RAISES</item>
        <item>HANGING V-RAISE WINDSHIELD WIPERS</item>
        <item>ONE ARM HANGING LEG RAISES</item>

    </string-array>
    <string-array name="LEGRAISES_VIDEOURL">
        <item>SeiGDD-ABE0</item>
        <item>qq69_MifXAc</item>
        <item>hav89ezKkPA</item>
        <item>IGrvIZjNCQU</item>
        <item>KNzJ3GuIpB8</item>
        <item>zfzJEuUDCS8</item>
        <item>CtFMjDbU0P4</item>
        <item>zfzJEuUDCS8</item>
        <item>7jI6fDNY_yM</item>
        <item>FrZBflOxEUY</item>
        <item>FrZBflOxEUY</item>
        <item>JOVlyJ19DJ4</item>
        <item>6ZKZCxAfPE8</item>
        <item>nDK7Fc_ryck</item>

    </string-array>
    <string-array name="PUSH_UPS">
        <item>WALL PUSH UPS</item>
        <item>BOX PUSH UPS</item>
        <item>¾ PUSH UPS</item>
        <item>¾ PUSH UPS +5S ECCENTRICS</item>
        <item>PUSH UPS</item>
        <item>ELBOWS IN PUSH UPS</item>
        <item>DIAMOND PUSH UPS</item>
        <item>UNEVEN PUSH UPS</item>
        <item>DECLINE PUSH UPS</item>
        <item>DECLINE ELBOWS IN PUSH UPS</item>
        <item>DECLINE DIAMOND PUSH UPS</item>
        <item>WALL ONE ARM PUSH UPS</item>
        <item>INCLINE ONE ARM PUSH UPS</item>
        <item>ONE ARM PUSH UPS</item>
        <item>DECLINE ONE ARM PUSH UPS</item>

    </string-array>
    <string-array name="PUSH_UPS_VIDEOURL">
        <item>N5C9NUHZ20U</item>
        <item>dcJVA2sBPqw</item>
        <item>DWx28SKtmMA</item>
        <item>DWx28SKtmMA</item>
        <item>RtzT6CD3DWw</item>
        <item>J0DnG1_S92I</item>
        <item>J0DnG1_S92I</item>
        <item>o1abTRdwpUs</item>
        <item>SKPab2YC8BE</item>
        <item>QuaOc1mFcqs</item>
        <item>3_t6n2AUQQ0</item>
        <item>lkHe72iH_1I</item>
        <item>mctH5fyzqqo</item>
        <item>ReKZry7JQEQ</item>
        <item>Hpw0M3Pz8sE</item>

    </string-array>
    <string-array name="HORIZONTAL_PULLS">
        <item>VERTICAL PULLS</item>
        <item>VERTICAL PULLS WITH A TOWEL</item>
        <item>INVERTED ROWS, LEGS BENT</item>
        <item>INVERTED ROWS, STRAIGHT LEGS</item>
        <item>INVERTED ROWS, ONE LEG EXTENDED</item>
        <item>INVERTED ROWS, LEGS ELEVATED</item>
        <item>LEGS ELEVATED, ONE LEG EXTENDED</item>
        <item>TUCK KNEES, FRONT LEVER ROWS</item>
        <item>ADVANCED TUCK KNEES ROWS</item>
        <item>ONE TUCK KNEE, ONE LEG EXTENDED ROWS</item>
        <item>STRADDLE LEGS FRONT LEVER ROWS</item>
        <item>FRONT LEVER ROWS</item>


    </string-array>
    <string-array name="HORIZONTAL_PULLS_VIDEOURL">
        <item>F8kIJMeqCMs</item>
        <item>VERTICAL PULLS WITH A TOWEL</item>
        <item>G657nWtyrek</item>
        <item>Ttejv7VoZo0</item>
        <item>ZpV3GZ5jEXc</item>
        <item>ZpV3GZ5jEXc</item>
        <item>ZpV3GZ5jEXc</item>
        <item>WYKsBVIKQss</item>
        <item>mpX5l2V2MnY</item>
        <item>ONE TUCK KNEE, ONE LEG EXTENDED ROWS</item>
        <item>KdOGz5JQ0tk</item>
        <item>owXfTSkJqr4</item>


    </string-array>
    <string-array name="DIPS">
        <item>BENT KNEE BENCH DIPS</item>
        <item>STRAIGHT LEGS BENCH DIPS</item>
        <item>ONE ELEVATED LEG, STRAIGHT LEGS DIPS</item>
        <item>ELEVATED LEGS BENCH DIPS</item>
        <item>ONE EXTENDED LEG, ELEVATED LEGS DIPS</item>
        <item>LEGS SUPPORTED DIPS</item>
        <item>ONE LEG SUPPORTED DIPS</item>
        <item>JUMPING AND 5S ECCENTRIC DIPS</item>
        <item>HALF DIPS</item>
        <item>DIPS</item>
        <item>LEGS FORWARD DIPS</item>
        <item>RUSSIAN DIPS</item>


    </string-array>
    <string-array name="DIPS_VIDEOURL">
        <item>13Job_1g5Ck</item>
        <item>dgDCYfHkHnU</item>
        <item>UbIVpeSdBTs</item>
        <item>fdmxpd8OK1o</item>
        <item>ONE EXTENDED LEG, ELEVATED LEGS DIPS</item>
        <item>LEGS SUPPORTED DIPS</item>
        <item>ONE LEG SUPPORTED DIPS</item>
        <item>JUMPING AND 5S ECCENTRIC DIPS</item>
        <item>Cm81Hqwt-rU</item>
        <item>wjUmnZH528Y</item>
        <item>LEGS FORWARD DIPS</item>
        <item>J1IA1R4lBKQ</item>


    </string-array>
    <string-array name="LEVEL">
        <item>1ST LEVEL</item>
        <item>2ND LEVEL</item>
        <item>3RD LEVEL</item>
        <item>4TH LEVEL</item>
        <item>5TH LEVEL</item>
        <item>6TH LEVEL</item>
        <item>7TH LEVEL</item>
        <item>8TH LEVEL</item>
        <item>9TH LEVEL</item>
        <item>10TH LEVEL</item>
        <item>11TH LEVEL</item>
        <item>12TH LEVEL</item>
        <item>13TH LEVEL</item>
        <item>14TH LEVEL</item>
        <item>15TH LEVEL</item>

    </string-array>
    <string-array name="description">
        <item>random description</item>
        <item>random description</item>
        <item>random description</item>
        <item>random description</item>
        <item>random description</item>
        <item>random description</item>
        <item>random description</item>
        <item>random description</item>

    </string-array>
    <string name="title_activity_exercises">ExercisesActivity</string>
    <string name="log_in">LOG IN</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="welcome_to_calitracker">WELCOME TO CALITRACKER</string>
    <string name="stay_on_track">STAY ON TRACK</string>
    <string name="here_you_can_enable_or_disable_notifications">Here you can enable or disable notifications.</string>
    <string name="_4_4">4/4</string>
    <string name="push_notifications">PUSH NOTIFICATIONS</string>
    <string name="you_ll_be_updated_on_the_latest_updates_to_content_and_features_specifically_in_the_app">You\'ll be updated on the latest updates to content and features specifically in the app.</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="prefer_not_to_say">PREFER NOT TO SAY</string>
    <string name="select_your_gender_preference">SELECT YOUR GENDER PREFERENCE</string>
    <string name="_2_4">2/4</string>
    <string name="male_sign">Male sign</string>
    <string name="female_sign">Female sign</string>
    <string name="select_your_metric">SELECT YOUR METRIC</string>
    <string name="do_you_lift_in_kgs_or_lbs_select_the_metric_you_re_used_to_and_we_ll_display_your_weights_that_way">Do you lift in KGs or LBs? Select the metric you\'re used to and we’ll display your weights that way.</string>
    <string name="kg">Kg</string>
    <string name="lb">Lb</string>
    <string name="back">BACK</string>
    <string name="_3_4">3/4</string>
    <string name="skip">SKIP</string>
    <string name="weight">WEIGHT:</string>
    <string name="textview">TextView</string>
    <string name="_5">/5</string>
    <string name="play_button">play button</string>
    <string name="age">AGE</string>
    <string name="height">HEIGHT[FT]</string>
    <string name="calculate">CALCULATE</string>
</resources>