<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.progresstracking.calitracker.View.LoginScreen">


    <!-- CALITRACKER -->

    <VideoView
        android:id="@+id/videoView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/calitracker"
        android:layout_width="211dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|center_vertical"
        android:shadowDx="-4"
        android:shadowDy="-4"
        android:shadowRadius="2"
        android:text="@string/calitracker"
        android:textAppearance="@style/calitracker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.265" />

    <Button
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/log_in_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/videoView2"
        app:layout_constraintTop_toBottomOf="@+id/calitracker"
        app:layout_constraintVertical_bias="0.965"
        style="@style/transparent_button" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/roboto_bold"
        android:shadowColor="#000000"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:text="@string/log_in"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/videoView2"
        app:layout_constraintEnd_toStartOf="@+id/videoView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sign_up_button"
        app:layout_constraintTop_toBottomOf="@+id/calitracker"
        app:layout_constraintVertical_bias="0.965" />

    <View
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/videoView2"
        app:layout_constraintEnd_toStartOf="@+id/log_in_button"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toEndOf="@+id/sign_up_button"
        app:layout_constraintTop_toBottomOf="@+id/calitracker"
        app:layout_constraintVertical_bias="0.949" />


</androidx.constraintlayout.widget.ConstraintLayout>