<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cuyer.calitracker.View.BmiFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1D1D1B">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/BMItextView22Imperial"
                style="@style/fill_box_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:shadowDx="-4"
                android:shadowDy="-4"
                android:shadowRadius="2"
                android:text="The Basal Metabolic Rate (BMR) Calculator estimates your basal metabolic rate—the amount of energy expended while at rest in a neutrally temperate environment, and in a post-absorptive state" />

            <EditText
                android:id="@+id/ageEditTextImperial"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/age"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="#FFFFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/heightFtEditText"
                    style="@style/WeightEditTextStyle"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/height" />

                <EditText
                    android:id="@+id/heightInEditText"
                    style="@style/WeightEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="INCHES"
                    android:inputType="number" />
            </LinearLayout>

            <EditText
                android:id="@+id/weightPoundsEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/border"
                android:ems="10"
                android:fontFamily="@font/roboto_bold"
                android:hint="WEIGHT"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="#FFFFFFFF"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/calculateBmiButtonImperial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#000000"
                android:fontFamily="@font/roboto_bold"
                android:shadowDx="-4"
                android:shadowDy="-4"
                android:shadowRadius="2"
                android:text="@string/calculate"
                app:cornerRadius="60dp" />

            <TextView
                android:id="@+id/BmiTextViewImperial"
                style="@style/fill_box_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/BmiHealthTextViewImperial"
                style="@style/fill_box_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/textview"
                android:visibility="invisible" />
        </LinearLayout>


    </ScrollView>

</FrameLayout>